# Graph-Coloring-Peru

./: .gitignore  PlanDeTrabajo_Proyecto9_Grupo10.md  README.md  REQUISITOS.md  log_IA.md  main.py  requirements.txt
cpp/: CMakeLists.txt  run.bat
cpp/data/: resultados.csv
cpp/docs/: HERRAMIENTAS_PYTHON.md  figuras.py  make_tabla.py
cpp/src/: main.cpp
cpp/src/benchmark/: Benchmark.cpp  Benchmark.h
cpp/src/core/: Algorithms.cpp  Algorithms.h  CoreUtils.cpp  CoreUtils.h  Generators.cpp  Generators.h  Graph.cpp  Graph.h  PeruMap.cpp  PeruMap.h
cpp/src/gui/: BenchTab.cpp  BenchTab.h  DemoTab.cpp  DemoTab.h  DocsTab.cpp  DocsTab.h  MainWindow.cpp  MainWindow.h  MapTab.cpp  MapTab.h  RecursosTab.cpp  RecursosTab.h
data/: peru_map.json  resultados.csv
docs/: INSTALACION_WINDOWS.md  analisis_complejidad.tex  resultados_tabla.tex
src/: algorithms.py  app.py  benchmark.py  core.py  generators.py  peru.py
src/algorithms/: backtracking.py  dsatur.py  greedy.py
src/core/: graph_model.py  validator.py
src/generators/: peru_map.py
tests/: test_all.py
